--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Schilderwerken WdK
 description:
 
-baseurl: "/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://schilderwerkenwdk.be" # the base hostname & protocol for your site
 
 author:
